--- a/style.css
+++ b/style.css
@@ -54,9 +54,10 @@
     background-color: var(--cor-dois);
     display: flex;
     flex-direction: row;
-    padding-top: 5%;
+    padding-top: 3%;
     padding-left: 10%;
     padding-right: 15%;
+    padding-bottom: 3%;
     gap: 10%;
 }
 
