--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     flex-direction: row;
     padding-top: 3%;
     padding-left: 10%;
-    padding-right: 15%;
+    padding-right: 10%;
     padding-bottom: 3%;
     gap: 10%;
 }
@@ -69,7 +69,7 @@
     font-family: 'Playfair Display', sans-serif;
     color: var(--cor-quatro);
     font-size: 40px;
-    text-align: right;
+    text-align: center;
     padding-top: 5%;
     font-weight: 400;
 }
@@ -77,7 +77,7 @@
 .body_texto {
     font-family: 'Raleway', sans-serif;
     color: var(--cor-quatro);
-    text-align: right;
+    text-align: center;
     font-size: 24px;
 }
 
